--- a/resources.qrc
+++ b/resources.qrc
@@ -13,7 +13,7 @@
         <file>assets/search.ico</file>
         <file>assets/help.ico</file>
         <file>assets/menu.ico</file>
-        <file>assets/favorites.ico</file>
+        <file>assets/favourites.ico</file>
         <file>assets/download.ico</file>
         <file>assets/delete.ico</file>
         <file>assets/list.ico</file>
